--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,18 @@
     <title>Transit</title>
       <!-- Include the Tally widget script in the <head> section -->
     <script src="https://tally.so/widgets/embed.js"></script>
-  </head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GOOGLE_ANALYTICS_ID%"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '%REACT_APP_GOOGLE_ANALYTICS_ID%');
+    </script>
+
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
