--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Transit</title>
+    <title>commuter fyi</title>
       <!-- Include the Tally widget script in the <head> section -->
     <script src="https://tally.so/widgets/embed.js"></script>
 
